# agentfly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agentfly/: __init__.py  main.py
src/agentfly/agents/: claude.py  codex.py  openclaw.py  opencode.py
src/agentfly/cli/: _completion.py  doctor.py  launch.py  provider_cmd.py  test_cmd.py
src/agentfly/core/: config.py  launcher.py  resolver.py
src/agentfly/models/: schema.py
src/agentfly/providers/: anthropic.py  base.py  custom.py  deepseek.py  manager.py  openai.py  providers.json  registry.py
src/lmswitch/: __init__.py  main.py
src/lmswitch/agents/: base.py  claude.py  claude_code.py  cline.py  codex.py  configfile.py  droid.py  openclaw.py  opencode.py  pi.py  registry.py
src/lmswitch/cli/: agent_cmd.py  doctor.py  launch.py  provider_cmd.py  test_cmd.py
src/lmswitch/core/: config.py  injector.py  launcher.py  resolver.py
src/lmswitch/models/: __init__.py  schema.py  types.py
src/lmswitch/providers/: anthropic.py  base.py  custom.py  deepseek.json  deepseek.py  google.py  manager.py  openai.py  providers.json  registry.py
src/lmswitch/utils/: http.py  shell.py
tests/: conftest.py  test_config.py  test_doctor.py  test_launch_cmd.py  test_launcher.py  test_provider.py  test_provider_base.py  test_provider_cmd.py  test_provider_cmd_flows.py  test_provider_network.py  test_resolver.py  test_test_cmd.py
tests/test_agents/: test_claude.py  test_claude_code.py  test_codex.py  test_configfile.py  test_contract.py
